name: spc-algebra
version: 0.1
homepage: https://github.com/andrewthad/spc-algebra#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends:
      base >= 4.10 && < 5
    , quantification
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/spc-algebra
